--- a/src/.env
+++ b/src/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=fed6841eb445ef9620e9443704b1b1cc
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:ChangeMeLater@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:ChangeMeLater@mariadb_docker:3306/symfony_db?serverVersion=mariadb-10.7.1"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:1234/app?serverVersion=14&charset=utf8"
+###< doctrine/doctrine-bundle ###
