--- a/src/config/packages/security.yaml
+++ b/src/config/packages/security.yaml
@@ -19,6 +19,7 @@ security:
             custom_authenticator: App\Security\UsersAuthenticator
             logout:
                 path: app_logout
+                target: "app_login"
                 # where to redirect after logout
                 # target: app_any_route
 
@@ -31,8 +32,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/post, roles: ROLE_USER }
 
 when@test:
     security:
